--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   image_test_utils: ^1.0.0
+  build_runner: ^0.10.0
+  json_serializable: ^1.0.0
 
 
 # For information on the generic Dart part of this file, see the
